syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 first_number = 1 ;
  int32 second_number = 2;
}
message SumResponse {
  int32 sum_result = 1;
}
message PrimeNumberDecompositionRequest{
  int64 number = 1;
}
message PrimeNumberDecompositionResponse{
  int64 prime_factor = 1;
}
message ComputeAverageRequest {
  int32 number = 1;
}
message ComputeAverageResponse{
  double average = 1;
}
service CalculatorService {
  //Unary
  rpc Sum(SumRequest) returns (SumResponse){};

  //Streaming
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
      returns (stream PrimeNumberDecompositionResponse){};
  //Streaming
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){};
}